analytical done? omg

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -1,6 +1,6 @@
 \section{Аналитический раздел}
 
-В данном разделе будет проведен анализ предметной области корпусов текстов.
+В данном разделе будет проведен анализ предметной области корпусов текстов, будет формализована задача и данные, описаны пользователи, которые будут взаимодействовать с проектируемым приложением к базе данных, рассмотрены существующие модели данных и будет выбрана одна из моделей для дальнейшей разработки базы данных на ее основе.
 
 \subsection{Анализ предметной области}
 
@@ -332,3 +332,5 @@
 Помимо прочего, у реляционной модели есть еще ряд преимуществ --- современные ее реализации могут автоматически обеспечивать целостность данных и оптимизировать запросы, а также поддерживают транзакционность.
 
 \subsection{Вывод}
+
+В данном разделе был проведен анализ предметной области корпусов текстов, была формализована задача и данные, описаны пользователи, которые будут взаимодействовать с проектируемым приложением к базе данных, рассмотрены существующие модели данных, и была выбрана реляционная модель.
