add crow's foot erd + update chen erd

--- a/docs/report/02-design.tex
+++ b/docs/report/02-design.tex
@@ -2,6 +2,13 @@
 
 \subsection{Проектирование базы данных}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{diag/crow-foot-erd.pdf}
+	\caption{ER-диаграмма проектируемой базы данных в нотации Мартина}
+	\label{fig:erd}
+\end{figure}
+
 \subsection{Описание сущностей}
 
 \subsection{Описание ограничений целостности}
