update diagrams and stuff; add status field

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -71,7 +71,7 @@
 
 % \subsubsection{Тексты и разметки}
 
-\subsubsection{Типы текстовых разметок}
+\subsubsection*{Типы текстовых разметок}
 
 Существует множество типов текстовых разметок.
 Большинство современных корпусов относятся к корпусам морфологического или синтаксического вида~\cite[с. 56]{cl2020}.
@@ -168,7 +168,7 @@
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[angle=90, width=\textwidth]{diag/chen-v7.pdf}
+	\includegraphics[angle=90, width=\textwidth]{diag/chen-v8.pdf}
 	\caption{ER-диаграмма в нотации Чена}
 	\label{fig:chen}
 \end{figure}
