add triggers and stuff

--- a/docs/report/02-design.tex
+++ b/docs/report/02-design.tex
@@ -6,7 +6,7 @@
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{diag/erd-v2.pdf}
+	\includegraphics[width=\textwidth]{diag/erd-v3.pdf}
 	% \includegraphics[angle=90, width=0.75\textwidth]{diag/crow-foot-erd.pdf}
 	\caption{ER-диаграмма проектируемой базы данных в нотации Мартина}
 	\label{fig:erd}
@@ -24,6 +24,7 @@
     \item username --- имя пользователя;
     \item email --- электронная почта пользователя;
     \item pwd\_hash --- хеш пароля пользователя;
+    \item trust\_level --- уровень доверия пользователя (зависит от качества и количества совершенных разметок);
     \item creation\_date --- дата регистрации пользователя;
     \item last\_update\_date --- дата последнего обновления информации о пользователе.
 \end{itemize}
@@ -146,6 +147,7 @@ id & UUID & первичный ключ \\ \hline
 username & строка & уникальный, не пустое значение \\ \hline
 email & строка & не пустое значение \\ \hline
 pwd\_hash & строка & не пустое значение \\ \hline
+trust\_level & вещественное число & не пустое значение, по умолчанию 0 \\ \hline
 creation\_date & временная метка & не пустое значение \\ \hline
 last\_update\_date & временная метка & не пустое значение \\ \hline
 \end{tabular}
@@ -294,6 +296,21 @@ content & строка & не пустое значение \\ \hline
 
 \subsection{Описание функций, процедур и триггеров}
 
+Чем больше пользователь производит корректных разметок, тем сильнее модераторы могут его разметкам <<доверять>>.
+Рейтинг доверия пользователей можно вычислять разными способами.
+Одним из примитивных способов вычисления рейтинга доверия пользователя может быть следующий: увеличивать рейтинг доверия пользователя на пять за каждую утвержденную разметку, и уменьшать на четыре --- за каждую отклоненную.
+Пересчет рейтинга доверия пользователей можно производить автоматически, после проверки модератором его разметки, с помощью триггера.
+Алгоритм работы триггера, срабатывающего в ответ на обновление статуса разметки, приведен на рисунке \ref{fig:trig} ниже.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{diag/trig-v3.pdf}
+	\caption{Схема алгоритма работы триггера, отвечающего за пересчет уровня доверия пользователей}
+	\label{fig:trig}
+\end{figure}
+
 \subsection{Описание ролевой модели}
 
 \subsection{Вывод}
+
+% trust_level +2 -1
