design done? omg

--- a/docs/report/02-design.tex
+++ b/docs/report/02-design.tex
@@ -1,5 +1,7 @@
 \section{Конструкторский раздел}
 
+В данном разделе будет представлена схема проектируемой базы данных, будут описаны сущности базы данных, ограничения целостности, ролевая модель и используемые функции, процедуры и триггеры.
+
 \subsection{Проектирование базы данных}
 
 На рисунке \ref{fig:erd} представлена схема проектируемой базы данных.
@@ -320,4 +322,4 @@ content & строка & не пустое значение \\ \hline
 
 \subsection{Вывод}
 
-% trust_level +2 -1
+В данном разделе была представлена схема проектируемой базы данных, были описаны сущности базы данных, ограничения целостности, используемый триггер и используемая ролевая модель.
