--- a/docs/main.tex
+++ b/docs/main.tex
@@ -4,7 +4,9 @@
 
 \begin{document}
 
-\include{title}
+\includepdf[pages=-]{title-tz.pdf}
+
+% \include{title}
 
 % \include{task}
 
@@ -17,8 +19,8 @@
 \include{report/01-analytical}
 
 \include{report/02-design}
-\include{report/03-technological}
-\include{report/04-research}
+% \include{report/03-technological}
+% \include{report/04-research}
 \include{report/05-conclusion}
 \include{report/06-bibliography}
 
