huge stinky pile of stuff

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -144,3 +144,27 @@
   title        = {Конспект лекций по курсу <<Базы Данных>>},
   year         = {2023},
 }
+
+@misc{psql,
+	etitle   = {PostgreSQL: The World's Most Advanced Open Source Relational Database},
+	url      = {\url{https://www.postgresql.org/about}},
+    accessed = {01.06.2024},
+}
+
+@misc{go,
+	etitle   = {Build simple, secure, scalable systems with Go},
+	url      = {\url{https://go.dev/}},
+    accessed = {01.06.2024},
+}
+
+@misc{gosql,
+	etitle   = {Go --- sql package},
+	url      = {\url{https://pkg.go.dev/database/sql}},
+    accessed = {01.06.2024},
+}
+
+@misc{nvim,
+	etitle = {Neovim},
+	url    = {\url{https://neovim.io}},
+    accessed = {11.12.2023},
+}
