--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -67,7 +67,7 @@
     \item объемные списки терминов-кандидатов, которые необходимо проверять вручную, поскольку частота не является достаточным критерием для оценки того, является ли выделенное слово термином или нет. 
 \end{itemize}
 
-Точность определения границ термина при автоматической разметки является одной из основных лингвистических задач, а отсутствие на сегодняшний день веб-платформ для автоматической разметки русскоязычных текстов делает актуальным разработку таковой.
+Точность определения границ термина при автоматической разметки является одной из основных лингвистических задач, а отсутствие на сегодняшний день информационных систем для автоматической разметки русскоязычных текстов делает актуальным разработку таковой.
 
 % \subsubsection{Тексты и разметки}
 
