omg is technological focking done?

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -168,3 +168,9 @@
 	url    = {\url{https://neovim.io}},
     accessed = {11.12.2023},
 }
+
+@misc{restapi,
+	etitle = {What is a REST API?},
+	url    = {\url{https://www.ibm.com/topics/rest-apis}},
+    accessed = {03.06.2024},
+}
