--- a/docs/report/03-technological.tex
+++ b/docs/report/03-technological.tex
@@ -1,6 +1,12 @@
 \section{Технологический раздел}
 
+В данном разделе будет проведен выбор средств реализации базы данных и приложения к базе данных.
+Будут приведены описания реализаций сущностей базы данных, ограничений целостности и ролевой модели на уровне базы данных.
+Будет приведена схема реализованного триггера, продемонстрирована его работоспособность и описан интерфейс для доступа к базе данных.
+
 \subsection{Выбор средств реализации}
+
+В подразделах ниже будет проведен выбор средств для реализации базы данных и приложения к базе данных.
 
 \subsection*{Выбор СУБД}
 
@@ -31,6 +37,8 @@
 \end{itemize}
 
 \subsection{Описание реализаций}
+
+В подразделах ниже будет приведено описание реализаций сущностей базы данных, ограничений целостности базы данных, ролевой модели на уровне базы данных и реализованного триггера для корректировки уровня доверия пользователей.
 
 \subsubsection{Сущности базы данных}
 
@@ -127,6 +135,8 @@
         ]{../src/sql/create_tables.sql}
     \end{lstinputlisting}
 \end{code}
+
+\newpage
 
 \subsubsection{Ограничения целостности базы данных}
 
@@ -277,4 +287,37 @@
 
 \subsubsection{Интерфейс доступа к базе данных}
 
+В таблице ниже представлен интерфейс доступа к базе данных, осуществляемого с помощью REST API~\cite{restapi}.
+% XXX не полный и не полностью реализованный, но об этом знать не обязательно
+
+\begin{table}[H]
+\centering
+\caption{Интерфейс доступа к базе данных}
+\begin{tabular}{|m{2cm}|m{4cm}|m{9cm}|}
+\hline
+    \textbf{Метод} & \textbf{URL} & \textbf{Описание} \\ \hline
+    % GET & /api/v1/register & Получение страницы для регистрации \\ \hline
+    POST & /api/v1/register & Регистрация пользователя с введенными именем пользователя, адресом почты и паролем \\ \hline
+    % GET & /api/v1/login & Получение страницы для входа в систему \\ \hline
+    POST & /api/v1/login & Вход в систему по имени пользователя и паролю \\ \hline
+    % GET & /api/v1/profile & Получение личной страницы пользователя \\ \hline
+    GET & /api/v1/d/\{id\} & Получение текста документа с указанным id \\ \hline
+    POST & /api/v1/d & Добавление нового документа \\ \hline
+    GET & /api/v1/tasks & Получение списка заданий для разметки \\ \hline
+    GET & /api/v1/task/\{id\} & Получение страницы с конкретной задачей на разметку \\ \hline
+    POST & /api/v1/task & Создание нового задания на разметку \\ \hline
+    GET & /api/v1/a/\{id\} & Получение разметки с указанным id \\ \hline
+    POST & /api/v1/a & Добавление новой разметки \\ \hline
+    GET & /api/v1/search & Получение страницы для поиска по корпусу \\ \hline
+    POST & /api/v1/search & Выполнение поиска по корпусу \\ \hline
+\end{tabular}
+\label{tab:api}
+\end{table}
+
+% \newpage
+
 \subsection{Вывод}
+
+В данном разделе был проведен выбор средств реализации базы данных и приложения к базе данных.
+Были приведены описания реализаций сущностей базы данных, ограничений целостности и ролевой модели на уровне базы данных.
+Была приведена схема реализованного триггера, продемонстрирована его работоспособность и описан интерфейс для доступа к базе данных.
