--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -153,7 +153,7 @@
 
 @misc{go,
 	etitle   = {Build simple, secure, scalable systems with Go},
-	url      = {\url{https://go.dev/}},
+	url      = {\url{https://go.dev}},
     accessed = {01.06.2024},
 }
 
@@ -166,11 +166,47 @@
 @misc{nvim,
 	etitle = {Neovim},
 	url    = {\url{https://neovim.io}},
-    accessed = {11.12.2023},
+    accessed = {01.06.2024},
 }
 
 @misc{restapi,
 	etitle = {What is a REST API?},
 	url    = {\url{https://www.ibm.com/topics/rest-apis}},
+    accessed = {03.06.2024},
+}
+
+@misc{locust,
+	etitle = {LOCUST --- An open source load testing tool},
+	url    = {\url{https://locust.io}},
+    accessed = {03.06.2024},
+}
+
+@misc{amd,
+	etitle = {AMD Ryzen 7 4700U},
+	url    = {\url{https://www.amd.com/en/product/9096}},
+    accessed = {03.06.2024},
+}
+
+@misc{nixos,
+	etitle = {NixOS},
+	url    = {\url{https://nixos.org}},
+    accessed = {03.06.2024},
+}
+
+@misc{chromium,
+	etitle = {The Chromium Projects --- Chromium},
+	url    = {\url{https://www.chromium.org/Home}},
+    accessed = {03.06.2024},
+}
+
+@misc{alacritty,
+	etitle = {Alacritty --- A fast, cross-platform, OpenGL terminal emulator},
+	url    = {\url{https://github.com/alacritty/alacritty}},
+    accessed = {03.06.2024},
+}
+
+@misc{docker,
+	etitle = {What is Docker? --- Accelerate how you build, share, and run applications},
+	url    = {\url{https://www.docker.com}},
     accessed = {03.06.2024},
 }
