--- a/docs/report/04-research.tex
+++ b/docs/report/04-research.tex
@@ -2,7 +2,20 @@
 
 \subsection{Технические характеристики}
 
+Технические характеристики устройства, на котором выполнялись замеры времени, представлены ниже.
+\begin{enumerate}
+    \item Процессор: \texttt{AMD Ryzen 7 4700U} 2.0 ГГц~\cite{amd}, 8 физических ядер, 8 потоков;
+    \item Оперативная память: 8 ГБ, \texttt{DDR4}, 3200 МГц;
+    \item Операционная система: \texttt{NixOS 23.11.1209.933d7}~\cite{nixos};
+    \item Версия ядра: \texttt{6.1.64}.
+\end{enumerate}
+
+При выполнении замеров времени ноутбук был подключен к сети электропитания, был запущен браузер Chromium~\cite{chromium} с одной вкладкой и три терминала Alacritty~\cite{alacritty}, в которых выполнялись locust~\cite{locust}, сервер на Go и Neovim.
+На фоне работал Docker-контейнер~\cite{docker} с базой данных.
+
 \subsection{Описание исследования}
+
+\cite{locust}
 
 \subsection{Проведение исследования}
 
