don't number conclusions

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -331,6 +331,6 @@
 Описанная ранее формализация данных лучше всего укладывается в рамки реляционной модели, поэтому в основе разрабатываемой базы данных будет использоваться именно она.
 Помимо прочего, у реляционной модели есть еще ряд преимуществ --- современные ее реализации могут автоматически обеспечивать целостность данных и оптимизировать запросы, а также поддерживают транзакционность.
 
-\subsection{Вывод}
+\subsection*{Вывод}
 
 В данном разделе был проведен анализ предметной области корпусов текстов, была формализована задача и данные, описаны пользователи, которые будут взаимодействовать с проектируемым приложением к базе данных, рассмотрены существующие модели данных, и была выбрана реляционная модель.
