--- a/docs/report/02-design.tex
+++ b/docs/report/02-design.tex
@@ -320,6 +320,6 @@ content & строка & не пустое значение \\ \hline
     \item Администратор --- имеет все права доступа ко всем таблицам.
 \end{enumerate}
 
-\subsection{Вывод}
+\subsection*{Вывод}
 
 В данном разделе была представлена схема проектируемой базы данных, были описаны сущности базы данных, ограничения целостности, используемый триггер и используемая ролевая модель.
