--- a/docs/report/03-technological.tex
+++ b/docs/report/03-technological.tex
@@ -316,7 +316,7 @@
 
 % \newpage
 
-\subsection{Вывод}
+\subsection*{Вывод}
 
 В данном разделе был проведен выбор средств реализации базы данных и приложения к базе данных.
 Были приведены описания реализаций сущностей базы данных, ограничений целостности и ролевой модели на уровне базы данных.
