--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -324,7 +324,8 @@
 Она устраняет ограничение на атомарность данных, позволяя использовать поля с многозначными значениями.
 Значения этих полей могут содержать подзначения, и такой набор значений рассматривается как отдельная таблица, встроенная в основную таблицу.~\cite{lecnotes} % XXX actually it's not lecture notes but whatever
 
-\subsubsection{Выбор модели данных}
+% \subsubsection{Выбор модели данных}
+\subsection{Выбор модели данных}
 
 Как видно по рисунку \ref{fig:chen}, соблюдения строгой иерархии на диаграмме сущностей разрабатываемой базы данных не наблюдается.
 В случае сетевой модели возникают проблемы с выбором <<главного>> элемента, с которого будет осуществляться обход, и с обработкой нескольких путей, ведущих от главного элемента к искомому в случае наличия связи <<многие-ко-многим>>.
