--- a/docs/report/03-technological.tex
+++ b/docs/report/03-technological.tex
@@ -263,7 +263,7 @@
 	\label{fig:trig-impl}
 \end{figure}
 
-\subsubsection{Тестирование функций}
+\subsection{Тестирование функций}
 
 % Описание методов тестирования и тестовых кейсов для всех разработанных на стороне базы данных функций;
 
@@ -285,7 +285,7 @@
     \end{lstinputlisting}
 \end{code}
 
-\subsubsection{Интерфейс доступа к базе данных}
+\subsection{Интерфейс доступа к базе данных}
 
 В таблице ниже представлен интерфейс доступа к базе данных, осуществляемого с помощью REST API~\cite{restapi}.
 % XXX не полный и не полностью реализованный, но об этом знать не обязательно
