--- a/docs/report/02-design.tex
+++ b/docs/report/02-design.tex
@@ -315,7 +315,7 @@ content & строка & не пустое значение \\ \hline
 
 В разрабатываемой базе данных будет использоваться следующая ролевая модель:
 \begin{enumerate}
-    \item Пользователь --- имеет права доступа INSERT к таблицам TermAnnotation, TermAnnotationPart и StructAnnotation, права доступа SELECT к таблицам AnnotationTask, Sentence и Token.
+    \item Пользователь --- имеет права доступа SELECT к таблицам Sentence, Token и AnnotationTask, права доступа INSERT к таблицам TermAnno-tation, TermAnnotationPart и StructAnnotation.
     \item Модератор --- имеет все права доступа пользователя, а также INSERT к таблице AnnotationTask, UPDATE к таблицам AnnotationTask, Term-Annotation и StructAnnotation.
     \item Администратор --- имеет все права доступа ко всем таблицам.
 \end{enumerate}
